Restrutuado design para algo mais simples, adicionado Sobre

--- a/index.html
+++ b/index.html
@@ -1,26 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wercton Barbosa</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
         <nav>
-                <ul>
-                    <li><a href="#">Sobre</a></li>
-                    <li><a href="#">Projetos</a></li>
-                    <li><a href="#">Contato</a></li>
-                    <li><a href="#">Idiomas</a></li>
-                </ul>
+            <ul>
+                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#projetos">Projetos</a></li>
+                <li><a href="#contato">Contato</a></li>
+                <li><a href="#">Idiomas</a></li>
+            </ul>
         </nav>
     </header>
-    
+    <main>
+        <section class="sobre" id="sobre">
+            <h3>Sobre</h3>
+            <img src="https://github.com/Wercton.png">
+            <p>Graduando no curso de Ciência da Computação na <strong>Universaidade Federal do Tocantins</strong> (UFT), campus Palmas.
+                Fluente na língua inglesa com certificação <strong>TOEFL</strong> e estudante da língua alemã, tendo
+                sido certificado nesta pela <strong>DW Akademie</strong> (nível A2).</p>
+            <p>Realizou pesquisa com Algorítimo Genético na
+                otimização da geometria de pás de aerogeradores fazendo uso da linguagem de programação Python e sua
+                biblioteca Numpy. Desenvolvedor Back-End atuando no desenvolvimento e gerenciamento dos sistemas criados
+                pela <strong>Fábrica de Software</strong> da UFT. Um entusiasta da tecnologia em busca de conhecimento e da possibilidade
+                de fazer uma contribuição significativa para o mundo.</p>
+        </section>
+
+        <section class="experiencia" id="experiencia">
+            <h3>Experiência profissional</h3>
+            <p></p>
+        </section>
+
+        <section class="projetos" id="projetos">
+            <h3>Projetos</h3>
+            <p></p>
+        </section>
+
+        <section class="contato" id="contato">
+            <h3>Contato</h3>
+            <p></p>
+        </section>
+    </main>
+
 </body>
+
 </html>
