--- a/index.html
+++ b/index.html
@@ -53,9 +53,38 @@
                 <strong>Nelogica</strong>. Um entusiasta da tecnologia em busca de conhecimento e da possibilidade
                 de fazer uma contribuição significativa para o mundo.
             </p>
-            <a href="#experiencia">
+            <a href="#musicas">
                 <i class="bi bi-chevron-down"></i>
             </a>
+        </section>
+
+        <section class="content" id="musicas">
+            <h3>Recomendações musicais</h3>
+            <iframe style="border-radius:12px"
+                src="https://open.spotify.com/embed/track/4u7EnebtmKWzUH433cf5Qv?utm_source=generator&theme=0"
+                width="100%" height="80" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+            </iframe>
+            <iframe style="border-radius:12px"
+                src="https://open.spotify.com/embed/track/72Z17vmmeQKAg8bptWvpVG?utm_source=generator&theme=0"
+                width="100%" height="80" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+            </iframe>
+            <iframe style="border-radius:12px"
+                src="https://open.spotify.com/embed/track/3090goAxG6IlpCifA8m9xB?utm_source=generator&theme=0"
+                width="100%" height="80" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+            </iframe>
+            <iframe style="border-radius:12px"
+                src="https://open.spotify.com/embed/track/4IRHwIZHzlHT1FQpRa5RdE?utm_source=generator&theme=0"
+                width="100%" height="80" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+            </iframe>
+            <iframe style="border-radius:12px"
+                src="https://open.spotify.com/embed/track/2EoOZnxNgtmZaD8uUmz2nD?utm_source=generator&theme=0"
+                width="100%" height="80" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+            </iframe>
         </section>
         <!--
         <section class="experiencia content" id="experiencia">
